--- a/backup/面试结构化回答1：嵌入式系统基础.md
+++ b/backup/面试结构化回答1：嵌入式系统基础.md
@@ -36,7 +36,7 @@ example：
 第三**功耗成本**方面：嵌入式系统常追求低功耗和小体积（如智能手表），而通用计算机更注重性能扩展。
 比如：智能手机的摄像头模块是嵌入式系统，而手机整体可视为通用计算机。
 
-** _2. MCU的基本架构组成部分？_**
+ **_2. MCU的基本架构组成部分？_**
 回答：
 MCU（微控制器）的核心架构包括：
 （1）**CPU**：执行指令的核心，如ARM Cortex-M系列。
@@ -50,4 +50,25 @@ ADC/DAC：模数/数模转换。
 通信接口：UART、SPI、I2C等。
 （4）**总线系统**：连接CPU、存储器和外设的数据/地址/控制总线。
 
+**_3.什么是中断？中断服务程序（ISR）的设计注意事项？_**
 
+回答：
+中断：硬件或软件触发的异步事件，暂停当前程序以优先处理紧急任务。
+
+ISR设计注意事项：
+
+**短小高效**：仅执行关键操作（如置标志位），复杂逻辑移至主循环。
+**避免阻塞**：禁止使用延时函数或等待外部事件。
+**数据保护**：共享变量需用volatile修饰或原子操作保护。
+**优先级管理**：合理配置中断嵌套，防止优先级反转。
+示例：串口接收中断ISR仅将数据存入缓冲区，主程序解析协议。
+
+**_4. 轮询与中断驱动的优缺点对比_**
+回答：
+**轮询：**
+**优点**：实现简单（如循环读取传感器状态），适合低实时性场景。
+**缺点**：CPU占用率高，响应延迟不可控（如频繁空转浪费资源）。
+**_中断驱动：_**
+**优点：**实时性强（事件触发立即响应），CPU利用率高（可休眠）。
+**缺点：**编程复杂（需处理竞态条件），中断过多可能导致堆栈溢出。
+场景对比：**温湿度传感器定期采样可用轮询，火灾报警必须用中断。**
